--- a/author.html
+++ b/author.html
@@ -17,13 +17,15 @@
 
     <input type="button" onclick=" checkAuthor()" value="Check the guess">
 </form>
+<p id="result"></p>
 
-
-<p id="result">Result</p>
-
+<div class="container">
+    <img src="tirupati.jpg" width="100" height="100" id="image" onclick="selectImage()">
+</div>
 <script> 
-var good =0
-var oops =0
+var good = 0
+var oops = 0
+var useImage = 1
 function  checkAuthor(){
     console.log("Getting form values")
     secret = document.getElementById("secret").value
@@ -38,7 +40,20 @@ function  checkAuthor(){
     }
     out.innerHTML = ("Good - "+good+" OOPS - "+oops)
 }
+function selectImage(){
+    var result = document.getElementById("image")
+    switch(useImage){
+        case 1: result.src="tirupati.jpg"
+                useImage=2;
+            break;
+        case 2: result.src="madurai.jpg"
+                useImage=3;
+            break;
+        case 3: result.src="Amritsar.jpg"
+                useImage = 1;
+            break;
+    }
+}
 </script>
-
 </body>
 </html> 
