Updated cruise.html page

--- a/cruise.html
+++ b/cruise.html
@@ -9,7 +9,7 @@
 
 <form>
     <label for="SharesCabin">Shares Cabin</label>
-    <input type="checkbox" id="SharesCabin" name="SharesCabin" value="Ttrue">
+    <input type="checkbox" id="SharesCabin" name="SharesCabin" value="true">
     
     <label for="Breakfast">Breakfast</label>
     <input type="checkbox" id="Breakfast" name="Breakfast" value="true">
