--- a/tips.html
+++ b/tips.html
@@ -1,6 +1,18 @@
 <!DOCTYPE html>
 <html>
- <head><title>TIPS</title></head>
+ <head><title>TIPS</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" 
+    integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" 
+    integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" 
+    integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+  </head>
 <body>
 
 <h2>shows tip amounts</h2>
@@ -13,15 +25,15 @@
 <input type="button" onclick="tips()" id="tips" value="Show tip">
 <p id="tipsresult"></p>
 
-<form>
+<form class="form-group">
     <label for="sum">sum</label>
-    <input type="radio" id="sum" name="operation" value="sum">
+    <input type="radio" id="sum" name="operation" value="sum" class="form-check-label">
     
     <label for="diff">diff</label>
-    <input type="radio" id="diff" name="operation" value="difference">
+    <input type="radio" id="diff" name="operation" value="difference" class="form-check-label">
 
     <label for="multiply">mult</label>
-    <input type="radio" id="multiply" name="operation" value="product">
+    <input type="radio" id="multiply" name="operation" value="product" class="form-check-label">
 
     <input type="button" onclick="chooseOp()" value="Select Operation">
   </form>
